Update Docker Compose file and Dockerfile for frontend component

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,12 @@
-FROM node:latest
+FROM node:6-onbuild
 
 MAINTAINER ClusterHQ Marketing <marketing@clusterhq.com>
 
-ENTRYPOINT ["node", "server.js"]
+RUN mkdir /myapp
+
+COPY * /myapp/
+
+WORKDIR /myapp
+
+### Expose the front end on port 8000
+EXPOSE 8000
