Read the directions. Also fixed call to Bower in Dockerfile with --allow-root parameter

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,5 +8,10 @@ COPY * /myapp/
 
 WORKDIR /myapp
 
+### Restore NPM packages from package.json
+RUN npm install \
+  && npm install -g bower \
+  && bower install --allow-root
+
 ### Expose the front end on port 8000
 EXPOSE 8000
