--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,8 @@ services:
       - db
     ports:
       - '8000:8000'
+    links:
+      - db
+    environment:
+      - DATABASE_HOST=db
+#      - 'DATABASE_PORT: 28015'
