--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '2'
 services:
   db:
     image: rethinkdb
+    ports:
+      - '8080:8080'
   frontend:
     build: ./frontend
     image: frontend
