--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,14 @@
     {
       "name": "Jonathan Gros-Dubois",
       "email": "grosjona@yahoo.com.au"
+    },
+    {
+      "name": "Ryan Wallner",
+      "email": "ryan@clusterhq.com"
+    },
+    {
+      "name": "Trevor Sullivan",
+      "email": "trevor@clusterhq.com"
     }
   ],
   "dependencies": {
@@ -15,7 +23,10 @@
     "serve-static": "1.8.0",
     "sc-crud-rethink": "5.0.x",
     "socketcluster": "4.x.x",
-    "socketcluster-client": "4.x.x"
+    "socketcluster-client": "4.x.x",
+    "mocha": "3.0.x",
+    "chai-http": "3.0.0",
+    "chai": "3.5.0"
   },
   "keywords": [
     "websocket",
