first pass at adding endpoints to get ALL vehicles and dealerships

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "socketcluster-client": "4.x.x",
     "mocha": "3.0.x",
     "chai-http": "3.0.0",
-    "chai": "3.5.0"
+    "chai": "3.5.0",
+    "rethinkdb": "2.3.3"
   },
   "keywords": [
     "websocket",
