--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,13 @@ services:
     environment:
       - DATABASE_HOST=db
       - DATABASE_PORT=28015
+  logging:
+    build: ./logging 
+    image: inventory-logging
+    depends_on:
+    ports:
+      - '514:514'
+      - '601:601'
+      - '6514:6514'
+    environment:
+      - ENVIRONMENT=development
