--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ volumes:
 services:
   db:
     image: rethinkdb
+    depends_on:
+      - logging
     volumes:
       - rethink-data:/data
     ports:
@@ -18,6 +20,7 @@ services:
     image: frontend
     depends_on:
       - db
+      - logging
     ports:
       - '8000:8000'
     environment:
