--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,20 +6,28 @@ volumes:
 
 services:
   db:
+    networks:
+      - net
     image: rethinkdb
     volumes:
       - rethink-data:/data
     ports:
-      - 28015:28015
-      - 29015:29015
-      - 8080:8080
+      - 28015
+      - 29015
+      - 8080
   frontend:
+    networks:
+      - net
     build: ./frontend
     image: frontend
     depends_on:
       - db
     ports:
-      - '8000:8000'
+      - '8000'
     environment:
       - DATABASE_HOST=db
       - DATABASE_PORT=28015
+
+networks:
+  net:
+    driver: bridge
