start to update parallel testing branch

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "rethinkdb": "2.3.3",
     "request": "2.74.0",
     "assert": "1.4.1",
+    "body-parser": "1.15.2",
     "util": "0.10.3"
   },
   "keywords": [
