--- a/fli-docker-manifest.yml
+++ b/fli-docker-manifest.yml
@@ -1,8 +1,7 @@
 docker_app: docker-compose.yml
 
 flocker_hub:
-    endpoint: http://data.flockerhub.clusterhq.com
-    tokenfile: /root/token.txt
+    endpoint: https://data.flockerhub.clusterhq.com
 
 volumes:
     - name: rethink-data
